Update and rename Home.html to index.html

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ div.scroll-container img:hover {
 </head>
 <body class="orbitron">
     <div class="nav">
-        <a class="active" href="Home.html">Home</a>
+        <a class="active" href="index.html">Home</a>
         <a class="goldman-regular" href="Feedback.html">Contact Us</a>
     </div>
 
@@ -300,4 +300,5 @@ div.scroll-container img:hover {
     <footer>
         <p>&copy  Abigail Johnson</p>
     </footer>
+
 </body>
