--- a/Feedback.html
+++ b/Feedback.html
@@ -105,7 +105,7 @@ body {
 </head>
 <body class="orbitron">
     <div class="nav">
-        <a class="goldman-regular" href="Home.html">Home</a>
+        <a class="goldman-regular" href="index.html">Home</a>
         <a class="active" href="Feedback.html">Contact Us</a>
     </div>
 
@@ -135,4 +135,5 @@ body {
     <footer>
         <p>&copy  Abigail Johnson</p>
     </footer>
+
 </body>
